# api/swagger.json
@@ -18,6 +18,12 @@
   }, {
     "name" : "lineItem",
     "description" : "Operations on lineItems"
+  }, {
+    "name" : "order",
+    "description" : "Operations on orders"
+  }, {
+    "name" : "orderItem",
+    "description" : "Operations on orderItems"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
@@ -857,6 +863,245 @@
           }
         }
       }
+    },
+    "/orders" : {
+      "get" : {
+        "tags" : [ "order" ],
+        "summary" : "Search order",
+        "description" : "Search order. Select values and filter fields for string patterns",
+        "operationId" : "findOrder",
+        "produces" : [ "application/json" ],
+        "parameters" : [ ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/Order"
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "order" ],
+        "summary" : "Create LineItems",
+        "description" : "Create a LineItem",
+        "operationId" : "createOrder",
+        "produces" : [ "application/json" ],
+        "parameters" : [ ],
+        "responses" : {
+          "201" : {
+            "description" : "successfullly created shop"
+          }
+        }
+      }
+    },
+    "/orders/{orderId}" : {
+      "get" : {
+        "tags" : [ "order" ],
+        "summary" : "get single order by id",
+        "description" : "get single order by id",
+        "operationId" : "getSingleOrder",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of order",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation"
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "order" ],
+        "summary" : "Update order",
+        "description" : "Update order info. Only filled in fields will change in shop.",
+        "operationId" : "updateOrder",
+        "consumes" : [ "application/x-www-form-urlencoded" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of order",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successfullly updated account"
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "order" ],
+        "summary" : "Delete order",
+        "description" : "Delete order by id",
+        "operationId" : "deleteOrder",
+        "consumes" : [ "application/x-www-form-urlencoded" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of order",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "204" : {
+            "description" : "successfullly deleted order."
+          }
+        }
+      }
+    },
+    "/orders/{orderId}/orderItems" : {
+      "get" : {
+        "tags" : [ "orderItem" ],
+        "summary" : "Search orderItem",
+        "description" : "Search orderItem. Select values and filter fields for string patterns",
+        "operationId" : "findOrderItem",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of product",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/LineItem"
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "orderItem" ],
+        "summary" : "Create orderItem",
+        "description" : "Create a orderItem",
+        "operationId" : "createOrderItem",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of OrderItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Shop fields. All fields must be provided. The Id field here is ignored and will be auto generated in the db.",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/OrderItem"
+          }
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "successfullly created shop"
+          }
+        }
+      }
+    },
+    "/orders/{orderId}/orderItems/{orderItemId}" : {
+      "get" : {
+        "tags" : [ "orderItem" ],
+        "summary" : "get single orderItem by id",
+        "description" : "get single orderItem by id",
+        "operationId" : "getSingleOrderItem",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of order",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "orderItemId",
+          "in" : "path",
+          "description" : "Id of orderItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation"
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "orderItem" ],
+        "summary" : "Update orderItem",
+        "description" : "Update orderItem info. Only filled in fields will change in orderItem.",
+        "operationId" : "updateOrderItem",
+        "consumes" : [ "application/x-www-form-urlencoded" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of order",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "orderItemId",
+          "in" : "path",
+          "description" : "Id of orderItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successfullly updated account"
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "orderItem" ],
+        "summary" : "Delete lineItem",
+        "description" : "Delete lineItem by id",
+        "operationId" : "deleteOrderItem",
+        "consumes" : [ "application/x-www-form-urlencoded" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "orderId",
+          "in" : "path",
+          "description" : "Id of order",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "orderItemId",
+          "in" : "path",
+          "description" : "Id of orderItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "204" : {
+            "description" : "successfullly deleted order."
+          }
+        }
+      }
     }
   },
   "definitions" : {
@@ -927,7 +1172,7 @@
         }
       },
       "xml" : {
-        "name" : "Shop"
+        "name" : "Product"
       },
       "example" : {
         "lineItemId" : 6,
@@ -958,8 +1203,8 @@
           "format" : "int64"
         },
         "price" : {
-          "type" : "integer",
-          "format" : "int64"
+          "type" : "number",
+          "format" : "float"
         }
       },
       "xml" : {
@@ -968,10 +1213,88 @@
       "example" : {
         "amount" : 5,
         "productId" : 6,
-        "price" : 5,
+        "price" : 5.637377,
         "name" : "name",
         "id" : 0,
         "shopId" : 1
+      }
+    },
+    "Order" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "accountId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "status" : {
+          "type" : "string"
+        },
+        "price" : {
+          "type" : "number",
+          "format" : "float"
+        }
+      },
+      "xml" : {
+        "name" : "LineItem"
+      },
+      "example" : {
+        "accountId" : 6,
+        "price" : 1.4658129,
+        "id" : 0,
+        "status" : "status"
+      }
+    },
+    "OrderItem" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "orderId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "ownerId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "buyerId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "lineItemId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "lineItemName" : {
+          "type" : "string"
+        },
+        "amount" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "price" : {
+          "type" : "number",
+          "format" : "float"
+        }
+      },
+      "xml" : {
+        "name" : "OrderItem"
+      },
+      "example" : {
+        "amount" : 2,
+        "orderId" : 6,
+        "lineItemId" : 5,
+        "lineItemName" : "lineItemName",
+        "price" : 7.0614014,
+        "id" : 0,
+        "ownerId" : 1,
+        "buyerId" : 5
       }
     }
   }
